# FoundationPoseWS

./: README.md  estimater.py  readme.md
src/pose_estimation_interfaces/: CMakeLists.txt  package.xml
src/pose_estimation_interfaces/action/: SegmentUsingSam.action
src/pose_estimation_interfaces/msg/: ResetTracking.msg  TrackItMsg.msg
src/pose_estimation_interfaces/srv/: ExtractSegMapWithPrompt.srv  TrackStep.srv
src/pose_realtime_pipeline/: CMakeLists.txt  package.xml
src/pose_realtime_pipeline/src/: pose_pipeline.cpp
src/sam2_foundation/: package.xml  setup.cfg  setup.py
src/sam2_foundation/sam2_foundation/: FoundationPose  segmentation_action.py  segmentation_service.py  tracking_service.py
src/sam2_service/: package.xml  setup.cfg  setup.py
src/sam2_service/sam2_service/: segmentation_action.py  segmentation_service.py
