<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sam2_foundation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="e12044788@student.tuwien.ac.at">aloch</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>pose_estimation_interfaces</exec_depend>
  


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
